force-app/main/default/objects/Products__c/fields/Active_Flag_A__c.field-meta.xml
<CustomField>
    <fullName>Active_Flag_A__c</fullName>
    <label>Active Flag A</label>
    <length>5</length>
    <type>Text</type>
</CustomField>