force-app/main/default/objects/Products__c/fields/Bundle_Name__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Name__c</fullName>
    <label>Bundle Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>