force-app/main/default/objects/Products__c/fields/Circuit_Id__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Id__c</fullName>
    <label>Circuit Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>