force-app/main/default/objects/Products__c/fields/Cust_Owned_Maint_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Cust_Owned_Maint_Equipment__c</fullName>
    <label>Cust Owned/Maint Equipment</label>
    <length>25</length>
    <type>Text</type>
</CustomField>