force-app/main/default/objects/Products__c/fields/DC__c.field-meta.xml
<CustomField>
    <fullName>DC__c</fullName>
    <label>DC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>