force-app/main/default/objects/Products__c/fields/Generic_SKU__c.field-meta.xml
<CustomField>
    <fullName>Generic_SKU__c</fullName>
    <label>Generic SKU</label>
    <length>25</length>
    <type>Text</type>
</CustomField>