force-app/main/default/objects/Products__c/fields/Grouping_Name__c.field-meta.xml
<CustomField>
    <fullName>Grouping_Name__c</fullName>
    <label>Grouping Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>