force-app/main/default/objects/Products__c/fields/I_HSI_WIFI__c.field-meta.xml
<CustomField>
    <fullName>I_HSI_WIFI__c</fullName>
    <label>I(HSI/WIFI)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>