force-app/main/default/objects/Products__c/fields/IN_Service_Order__c.field-meta.xml
<CustomField>
    <fullName>IN_Service_Order__c</fullName>
    <label>IN Service Order</label>
    <length>25</length>
    <type>Text</type>
</CustomField>