force-app/main/default/objects/Products__c/fields/InDATE__c.field-meta.xml
<CustomField>
    <fullName>InDATE__c</fullName>
    <label>InDATE</label>
    <type>Date</type>
</CustomField>