force-app/main/default/objects/Products__c/fields/MRC_NRC_FLag__c.field-meta.xml
<CustomField>
    <fullName>MRC_NRC_FLag__c</fullName>
    <label>MRC/NRC FLag</label>
    <length>5</length>
    <type>Text</type>
</CustomField>