force-app/main/default/objects/Products__c/fields/NO_Flag_Tax_T__c.field-meta.xml
<CustomField>
    <fullName>NO_Flag_Tax_T__c</fullName>
    <label>NO Flag Tax(T)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>