force-app/main/default/objects/Products__c/fields/OUT_Service_Order__c.field-meta.xml
<CustomField>
    <fullName>OUT_Service_Order__c</fullName>
    <label>OUT Service Order</label>
    <length>5</length>
    <type>Text</type>
</CustomField>