force-app/main/default/objects/Products__c/fields/Package_Code__c.field-meta.xml
<CustomField>
    <fullName>Package_Code__c</fullName>
    <label>Package Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>