force-app/main/default/objects/Products__c/fields/Package_Description__c.field-meta.xml
<CustomField>
    <fullName>Package_Description__c</fullName>
    <label>Package Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>