force-app/main/default/objects/Products__c/fields/Prefix_P__c.field-meta.xml
<CustomField>
    <fullName>Prefix_P__c</fullName>
    <label>Prefix(P)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>