force-app/main/default/objects/Products__c/fields/Product_GroupId__c.field-meta.xml
<CustomField>
    <fullName>Product_GroupId__c</fullName>
    <label>Product GroupId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>