force-app/main/default/objects/Products__c/fields/Product_Rate__c.field-meta.xml
<CustomField>
    <fullName>Product_Rate__c</fullName>
    <label>Product Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>