force-app/main/default/objects/Products__c/fields/ProductGroupingSequence__c.field-meta.xml
<CustomField>
    <fullName>ProductGroupingSequence__c</fullName>
    <label>ProductGroupingSequence</label>
    <length>25</length>
    <type>Text</type>
</CustomField>