force-app/main/default/objects/Products__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <length>5</length>
    <type>Text</type>
</CustomField>