force-app/main/default/objects/Products__c/fields/Reacuuring_Charges__c.field-meta.xml
<CustomField>
    <fullName>Reacuuring_Charges__c</fullName>
    <label>Reacuuring Charges</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>