force-app/main/default/objects/Products__c/fields/S_E__c.field-meta.xml
<CustomField>
    <fullName>S_E__c</fullName>
    <label>S&amp;E</label>
    <length>25</length>
    <type>Text</type>
</CustomField>