force-app/main/default/objects/Products__c/fields/Service_Type_ST__c.field-meta.xml
<CustomField>
    <fullName>Service_Type_ST__c</fullName>
    <label>Service Type(ST)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>