force-app/main/default/objects/Products__c/fields/Vacation_Reactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Vacation_Reactivation_Date__c</fullName>
    <label>Vacation Reactivation Date</label>
    <type>Date</type>
</CustomField>