force-app/main/default/objects/Products__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account_Id__c</columns>
    <columns>Library_id__c</columns>
    <columns>Sequence_Number__c</columns>
    <columns>Service_Location__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Service_Type_ST__c</columns>
    <columns>Phone_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>